# VoxTriple

./: .gitignore  CHANGELOG.md  LICENSE  README.md  VERSION_LOG.md
MAC_app_python/: VoxTriple_mac.spec  keyboard_io_mac.py  requirements.txt  vox_triple_mac.py
Serial_Log/: COM4_2026_05_06.23.36.18.216.txt  COM4_2026_05_09.11.08.58.038.txt  COM4_2026_05_09.11.13.30.408.txt  COM4_2026_05_09.11.13.51.371.txt  COM4_2026_05_09.11.19.45.336.txt  COM4_2026_05_09.13.28.22.027.txt  COM4_2026_05_09.17.44.51.658.txt  COM4_2026_05_09.20.15.23.175.txt  COM4_2026_05_09.20.25.16.938.txt  COM4_2026_05_09.21.18.36.727.txt  COM4_2026_05_10.17.13.33.424.txt  COM4_2026_05_10.17.33.57.116.txt  COM4_2026_05_10.17.50.55.556.txt  COM4_2026_05_10.18.49.16.305.txt  COM4_2026_05_10.20.27.32.509.txt
_PCB/: README.md  VoxTriple.enet  VoxTriple.kicad.net  VoxTriple.net  board_layout.md
docs/: ESP32-S3_FINDINGS_AND_ESP-SR_GUIDE.md  architecture.md  ble_protocol.md  multi_device_spec.md  wiring_diagram.txt  接线引脚V1.txt
esp32_bt_mic/main/: CMakeLists.txt  Kconfig.projbuild  audio_capture.h  audio_task.c  ble_gatts_config.c  bt_app_core.c  bt_app_hf.c  bt_app_hf.h  bt_hfp_ag.c  bt_init.c  button_handler.c  button_handler.h
esp32_bt_mic/src/: CMakeLists.txt  Kconfig.projbuild  audio_capture.c  audio_task.h  ble_gatts_config.c  ble_gatts_config.h  ble_hid_keyboard.c  ble_hid_keyboard.h  bt_app_core.h  bt_app_hf.c  bt_app_hf.h  bt_hfp_ag.c  bt_hfp_ag.h  bt_hfp_hf.c  bt_hfp_hf.h  bt_init.c  bt_init.h  button_handler.c  config_storage.c  config_storage.h  main.c  ws2812_led.c  ws2812_led.h
(+30 files in other folders)
